plugins {
    id 'java'
    id 'io.freefair.lombok' version "8.6"
    id 'io.github.goooler.shadow' version '8.1.7'
    id("io.papermc.paperweight.userdev") version "1.7.1"
}

group = 'coma112'
version = '1.0.5'

repositories {
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }
    maven {
        url 'https://jitpack.io'
    }
    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
}

dependencies {
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
    implementation 'com.github.Revxrsal.Lamp:common:3.2.1'
    compileOnly 'me.clip:placeholderapi:2.11.3'
    implementation 'com.github.Revxrsal.Lamp:bukkit:3.2.1'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.bstats:bstats-bukkit:3.0.2'
    implementation 'com.github.Anon8281:UniversalScheduler:0.1.6'
    paperweight.paperDevBundle("1.21-R0.1-SNAPSHOT")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava {
    options.compilerArgs += ["-parameters"]
}

shadowJar {
    relocate 'org.bstats', 'coma112.creports'
    relocate 'com.github.Anon8281.universalScheduler', 'coma112.creports'
    minimize()
}

tasks.build {
    dependsOn shadowJar
}


